--- a/backend/templates/add_campaign.html
+++ b/backend/templates/add_campaign.html
@@ -1,40 +1,43 @@
-{% extends "layout.html" %}
-{% block title %}Create Campaign{% endblock %}
+{% extends "admin_layout.html" %} {% block title %}Create Campaign{% endblock %}
 {% block content %}
-<div class="bg-white p-6 rounded shadow max-w-lg mx-auto">
-  <h1 class="text-2xl font-bold mb-6">Create New Campaign</h1>
+<div class="flex pt-28">
+  <div class="p-12 rounded shadow max-w-lg mx-auto">
+    <h1 class="text-2xl font-bold mb-6">Create New Campaign</h1>
 
-  <form method="POST" action="#">
-    <div class="mb-4">
-      <label class="block text-gray-700 font-medium mb-2" for="title">Title</label>
-      <input
-        type="text"
-        id="title"
-        name="title"
-        required
-        class="w-full border border-gray-300 px-4 py-2 rounded"
-        placeholder="Campaign Name"
-      />
-    </div>
+    <form method="POST" action="{{ url_for('admin.addcampaign') }}">
+      <div class="mb-4">
+        <label class="block text-gray-700 font-medium mb-2" for="name"
+          >Title</label
+        >
+        <input
+          type="text"
+          id="name"
+          name="name"
+          required
+          class="w-full border border-gray-300 px-4 py-2 rounded"
+          placeholder="Campaign Name"
+        />
+      </div>
 
-    <div class="mb-4">
-      <label class="block text-gray-700 font-medium mb-2" for="description"
-        >Description</label
+      <div class="mb-4">
+        <label class="block text-gray-700 font-medium mb-2" for="description"
+          >Description</label
+        >
+        <textarea
+          id="description"
+          name="description"
+          required
+          class="w-full border border-gray-300 px-4 py-2 rounded"
+        ></textarea>
+      </div>
+
+      <button
+        type="submit"
+        class="bg-blue-600 w-full text-white px-6 py-2 rounded hover:bg-blue-700"
       >
-      <textarea
-        id="description"
-        name="description"
-        required
-        class="w-full border border-gray-300 px-4 py-2 rounded"
-      ></textarea>
-    </div>
-
-    <button
-      type="submit"
-      class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700"
-    >
-      Create Campaign
-    </button>
-  </form>
+        Create Campaign
+      </button>
+    </form>
+  </div>
 </div>
 {% endblock %}
