--- a/backend/templates/admin_layout.html
+++ b/backend/templates/admin_layout.html
@@ -5,7 +5,7 @@
     <title>{% block title %}Admin{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="h-screen flex">
+  <body class="h-screen">
     <nav class="bg-white fixed top-0 left-0 w-full z-50 shadow-md flex p-6 justify-between">
       <div class="text-xl font-semibold text-gray-800">
         <a href="{{ url_for('admin.admin_home') }}">Admin</a>
